# razer-laptop-control

./: Cargo.toml  README.md  flake.nix  install.sh
.github/workflows/: ci.yml
ci-helpers/: check-installation-nix.sh  check-installation.sh
crates/razer-laptop/: Cargo.toml
crates/razer-laptop/src/: lib.rs  razer_hidapi.rs
razer_control_gui/: Cargo.toml  install.sh
razer_control_gui/data/udev/: 99-hidraw-permissions.rules
razer_control_gui/src/: comms.rs  lib.rs  usb.rs
razer_control_gui/src/cli/: args.rs  cli.rs
razer_control_gui/src/daemon/: config.rs  daemon.rs  dbus_generated.rs  device.rs
razer_control_gui/src/daemon/dbus_generated/: battery.rs  dbus_mutter_displayconfig.rs  dbus_mutter_idlemonitor.rs  login1.rs  screensaver.rs
razer_control_gui/src/daemon/kbd/: effects.rs  mod.rs
razer_control_gui/src/razer-settings/: error_handling.rs  razer-settings.rs  util.rs  widgets.rs
razer_control_gui/src/usb/: razer_hidapi.rs
