[package]
name = "razer-laptop"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
hidapi = { version = "2.6.5", default-features = false, features = [
    "linux-static-hidraw",
] }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
bincode = "1.3.3"
serde-big-array = "0.5.1"
